--- a/README.org
+++ b/README.org
@@ -185,3 +185,28 @@ sys.argv[4] => fourth_arg  => --h
   os.devnull -> '/dev/null', etc
   """
 #+END_SRC
+** class special methods <lots of example needed>
+#+BEGIN_SRC python
+"""
+__new__(cls)
+__init__(self, args)
+__del__(self)
+__repr__(self)
+__str__(self)
+__cmp__(self, other)
+__index__(self)
+__hash__(self)
+__getattr__(self, name)
+__getattribute__(self, name)
+__setattr__(self, name, attr)
+__delattr__(self, name)
+__call__(self, name, kwargs)
+__lt__(self, other)
+__le__(self, other)
+__gt__(self, other)
+__ge__(self, other)
+__eq__(self, other)
+__ne__(self, other)
+__nonzero__(self)
+"""
+#+END_SRC
