--- a/README.org
+++ b/README.org
@@ -210,3 +210,21 @@ __ne__(self, other)
 __nonzero__(self)
 """
 #+END_SRC
+
+* Contributing
+Please read [[./CONTRIBUTING.md][CONTRIBUTING.md]] for details on our code of conduct, and the process for submitting pull requests to us.
+
+* Versioning
+We use [[http://semver.org/][SemVer]] for versioning. For the versions available, see the tags on this repository.
+
+* Authors
+Billie Thompson - Initial work - PurpleBooth
+See also the list of contributors who participated in this project.
+
+* License
+This project is licensed under the MIT License - see the LICENSE.md file for details
+
+* Acknowledgments
+Hat tip to anyone whose code was used
+Inspiration
+etc
