--- a/README.org
+++ b/README.org
@@ -222,7 +222,7 @@ Billie Thompson - Initial work - PurpleBooth
 See also the list of contributors who participated in this project.
 
 * License
-This project is licensed under the MIT License - see the LICENSE.md file for details
+This project is licensed under the MIT License - see the [[./LICENSE][LICENSE]] file for details
 
 * Acknowledgments
 Hat tip to anyone whose code was used
