refactor: moved all the images to another file
>>> Why is this Change Necessary?:

>>> This change address the need by:

>>> What Side Effects does this change have?

>>> Issue #None

--- a/README.org
+++ b/README.org
@@ -281,20 +281,15 @@ print(volume.cube_volume(12))
 
 #+END_SRC
 
-[[./images/modules_and_packages/001.png]]
-[[./images/modules_and_packages/002.jpg]]
-[[./images/modules_and_packages/003.png]]
-[[./images/modules_and_packages/004.png]]
-[[./images/modules_and_packages/005.png]]
-[[./images/modules_and_packages/006.png]]
-[[./images/modules_and_packages/007.png]]
-
 The Module to be recognized as package should have __path__ attribute
 *** Locating Modules
 at the time of import; python interpreter searches for the module in the following 
 1. pwd
 2. each dir in the `PYTHONPATH`
 3. default path - on unix `/usr/local/lib/python`
+
+*More Examples*: [[./modules_and_packages.org][Modules and Packages]]
+
 * Contributing
 Please read [[./CONTRIBUTING.md][CONTRIBUTING.md]] for details on our code of conduct, and the process for submitting pull requests to us.
 
