--- a/modules_and_packages.org
+++ b/modules_and_packages.org
@@ -5,3 +5,13 @@
 [[./images/modules_and_packages/005.png]]
 [[./images/modules_and_packages/006.png]]
 [[./images/modules_and_packages/007.png]]
+[[./images/modules_and_packages/0001.png]]
+[[./images/modules_and_packages/0002.png]]
+[[./images/modules_and_packages/0003.png]]
+[[./images/modules_and_packages/0004.png]]
+[[./images/modules_and_packages/0005.png]]
+[[./images/modules_and_packages/0006.png]]
+[[./images/modules_and_packages/0007.png]]
+[[./images/modules_and_packages/0008.png]]
+[[./images/modules_and_packages/0009.png]]
+[[./images/modules_and_packages/00010.png]]
