--- a/README.org
+++ b/README.org
@@ -214,11 +214,11 @@ __nonzero__(self)
 ** modules and packages
 [[./images/modules_and_packages/Python-packages-.gif]]
 *** Modules
-<file-name>.py contains definitions, functions, classes and statements
+`<file-name>.py` contains definitions, functions, classes and statements
 #+BEGIN_SRC python
 
   ##########################
-  # Example: area.py
+  # Example: Creating module
   ##########################
   import math
 
