refactor: improved headlines
>>> Why is this Change Necessary?:

>>> This change address the need by:

>>> What Side Effects does this change have?

>>> Issue #None

--- a/README.org
+++ b/README.org
@@ -233,7 +233,7 @@ __nonzero__(self)
   ##########################
 
   ##########################
-  # Example: using area.py
+  # Example: importing module
   ##########################
   import area
   print(area.circle_area(50)
