--- a/README.org
+++ b/README.org
@@ -253,7 +253,7 @@ __nonzero__(self)
 
 #+END_SRC
 
-`__name__` is set to `__main__` when the module is run as standalone program.
+*Executing modules as scripts* : `__name__` is set to `__main__` when the module is run as standalone program.
 run script as stand-alone program
 #+BEGIN_SRC python
   if __name__ == '__main__':
