--- a/README.org
+++ b/README.org
@@ -9,8 +9,8 @@ Notes that I tend to forget all the time and search on the internet
 * CHEATSHEET
 ** architecture
 [[./images/architecture/001.jpg]]
-- *Parser* - source code >>> abstract syntax tree [AST].
-- *compiler* - AST >>> Python Byte Code.
+- *Parser* - source code ⇒ abstract syntax tree [AST].
+- *compiler* - AST ⇒ Python Byte Code.
 - *interpreter* - execute line by line
 
 ** rules
