refactor: add link to more
>>> Why is this Change Necessary?:

>>> This change address the need by:

>>> What Side Effects does this change have?

>>> Issue #None

--- a/README.org
+++ b/README.org
@@ -12,7 +12,7 @@ Notes that I tend to forget all the time and search on the internet
 - *Parser* - source code ⇒ abstract syntax tree [AST].
 - *compiler* - AST ⇒ Python Byte Code.
 - *interpreter* - execute line by line
-
+*More* - [[./architecture.org][architecture.org]]
 ** rules
 #+BEGIN_SRC python
 """
