--- a/README.org
+++ b/README.org
@@ -235,6 +235,24 @@ we never need to import any modules to access built-ins like print(), id()
 1 in [3, 4, 5, 6] # returns true if 1 is in the collection
 #+END_SRC
 
+bitwise operators
+#+BEGIN_SRC python
+>>> 2&3
+2 # 10 & 11 => 10
+>>> 2|3
+3 # 10 | 11 => 11
+>>> 2^3
+1  # 10 ^ 11 => 01
+>>> ~-3
+2  # -(-3) - 1 => 2
+>>> 2<<2
+8 # ((2 * 2) * 2)
+>>> 3>>2
+0 # (3//2)//2
+>>> 3>>1
+1 # 3//2
+
+#+END_SRC
 ** strings
 *** create a string
 #+BEGIN_SRC python
